# catalog

./: .gitignore  main.py  pyproject.toml
catalog/: ColesCrawler.py  ConvertGraph.py  Crawler.py  Product.py  ProductQuantity.py  WoolworthsCrawler.py  aws.py
tests/: test_clean_name.py  test_coles.py  test_playwright.py  test_price_per_volume.py  test_quantity.py  test_regex.py  test_woolworths.py
tests/files/: coles_search.html  woolworths_search.html
