[tool.poetry]
name = "catalog"
version = "0.1.0"
description = ""
authors = ["Ethan McPherson <emcpherson121@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
httpx = "^0.24.1"
playwright = "^1.36.0"
pydantic = "^2.1.1"
boto3 = "^1.28.25"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
import-linter = "^1.10.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-playwright = "^0.3.3"
py-spy = "^0.3.14"
ruff = "^0.0.280"
types-beautifulsoup4 = "^4.12.0.5"
pytest-cov = "^4.1.0"
boto3-stubs = "^1.28.25"
mypy-boto3-s3 = "^1.28.19"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "A",   # prevent using keywords that clobber python builtins
    "B",   # bugbear: security warnings
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "ISC", # implicit string concatenation
    "UP",  # alert you when better syntax is available in your python version
    "RUF", # the ruff developer's own rules
]

ignore = [
    "E501", # Supress line-too-long warnings: trust black's judgement on this one.
]

fixable = [
    'I',    # sort imports
    'F401', # remove unused imports
]

[tool.importlinter]
root_package = "catalog"

[[tool.importlinter.contracts]]
name = "ProductQuantity doesn't import Product"
type = "forbidden"
source_modules = ["catalog.ProductQuantity"]
forbidden_modules = ["catalog.Product", "catalog.ConvertTree"]
